# mouse-config-gui

./: README.md  pyproject.toml
.github/workflows/: test.yml
capabilities/: generic.yaml  m607.yaml  m686.yaml  m711.yaml  m715.yaml  m908.yaml
design_docs/: macro-editor.md  mouse-config-gui-design.md  mouse_gui_mockup.html
docs/: macro-editor-guide.md  user-guide.md
src/mouse_config_gui/: button_group.py  button_picker.py  capability.py  device_cli.py  dpi_group.py  ini_io.py  keymap.py  keymap_data.yaml  led_group.py  macro_editor.py  macro_library.py  main.py  models.py  performance_group.py  window.py
src/mouse_config_gui/capabilities/: generic.yaml  m607.yaml  m686.yaml  m709.yaml  m711.yaml  m715.yaml  m719.yaml  m721.yaml  m908.yaml  m913.yaml  m990.yaml  m990chroma.yaml
tests/: test_capability.py  test_device_cli.py  test_ini_io.py  test_keymap.py  test_macro_library.py
